src/tui/snapshots/agentctl__tui__ui__tests__a_degraded_account_shows_its_badge_and_its_state.snap
---
source: src/tui/ui_tests.rs
expression: terminal.backend()
---
"agentctl claude watch · 2 accounts · last fetch — · fetching · stale                "
"┌▸ owner@example.com · Acme · max ─────────────────────────────────────────────────┐"
"│5h        ███████████████                   21%                                   │"
"│weekly    █████████████████████████         35%                                   │"
"│Fable     ██████████████████████████████████56% ██                                │"
"│[claude-detected] · claude session detected — refresh refused (lock .oauth_refresh│"
"└──────────────────────────────────────────────────────────────────────────────────┘"
"┌  live@example.com · Acme · — ────────────────────────────────────────────────────┐"
"│[keychain-locked] · keychain locked                                               │"
"└──────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                    "
"                                                                                    "
"                                                                                    "
"                                                                                    "
"                                                                                    "
"                                                                                    "
"                                                                                    "
"                                                                                    "
"                                                                                    "
"q quit · r refresh · ↑↓ select                                                      "
