src/tui/snapshots/agentctl__tui__ui__tests__an_empty_display_says_so_rather_than_showing_nothing.snap
---
source: src/tui/ui_tests.rs
expression: terminal.backend()
---
"agentctl claude watch · 0 accounts · last fetch — · next fet"
"no accounts to show                                         "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"q quit · r refresh · ↑↓ select                              "
