src/tui/snapshots/agentctl__tui__ui__tests__two_accounts_render_as_expected.snap
---
source: src/tui/ui_tests.rs
expression: terminal.backend()
---
"agentctl claude watch · 2 accounts · last fetch 30s ago · next fetch in 4m          "
"┌▸ owner@example.com · Acme · max ─────────────────────────────────────────────────┐"
"│5h        ███████████████                   21%                                   │"
"│weekly    █████████████████████████         35%                                   │"
"│Fable     ██████████████████████████████████56% ██                                │"
"│ok · next reset in 2h12m                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────┘"
"┌  second@example.com · Acme · max ────────────────────────────────────────────────┐"
"│5h        ███                                4%                                   │"
"│weekly    ████████                          11%                                   │"
"│Fable     █████                              7%                                   │"
"│credits   ██████████████████                25%                                   │"
"│ok · next reset in 2h12m                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                    "
"                                                                                    "
"                                                                                    "
"                                                                                    "
"q quit · r refresh · ↑↓ select                                                      "
"1 entry hidden (agentctl claude status --all)                                       "
